--- a/trades/templates/trades/add_trade.html
+++ b/trades/templates/trades/add_trade.html
@@ -1,6 +1,12 @@
 {% extends 'trades/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-<h2>Add Trade</h2>
-<p>The trade form will be implemented here soon.</p>
+<h2>Add New Trade</h2>
+
+<form method="post" novalidate>
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary mt-2">Save Trade</button>
+</form>
 {% endblock %}
