--- a/trades/templates/trades/trade_list.html
+++ b/trades/templates/trades/trade_list.html
@@ -14,6 +14,7 @@
             <th>Return %</th>
             <th>Holding (days)</th>
         </tr>
+        <th>Actions</th>
     </thead>
     <tbody>
         {% for trade in trades %}
@@ -42,6 +43,10 @@
         <tr>
             <td colspan="7">You haven't logged any trades yet.</td>
         </tr>
+        <td>
+         <a href="{% url 'edit_trade' trade.pk %}" class="btn btn-sm btn-outline-primary">Edit</a>
+         <a href="{% url 'delete_trade' trade.pk %}" class="btn btn-sm btn-outline-danger">Delete</a>
+        </td>
         {% endfor %}
     </tbody>
 </table>
