--- a/trades/templates/trades/dashboard.html
+++ b/trades/templates/trades/dashboard.html
@@ -1,43 +1,53 @@
 {% extends 'trades/base.html' %}
-
 {% block content %}
-<div class="text-center">
-    <h1 class="mb-4">Welcome to TradeTracker</h1>
-    <p>This is your personal trading dashboard.</p>
 
-    <div class="row mt-5">
-        <div class="col-md-3">
-            <div class="card text-white bg-primary mb-3">
-                <div class="card-body">
-                    <h5 class="card-title">Total Trades</h5>
-                    <p class="card-text">Coming soon</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card text-white bg-success mb-3">
-                <div class="card-body">
-                    <h5 class="card-title">Win Rate</h5>
-                    <p class="card-text">Coming soon</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card text-white bg-warning mb-3">
-                <div class="card-body">
-                    <h5 class="card-title">Return %</h5>
-                    <p class="card-text">Coming soon</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card text-white bg-dark mb-3">
-                <div class="card-body">
-                    <h5 class="card-title">Holding Time</h5>
-                    <p class="card-text">Coming soon</p>
-                </div>
-            </div>
-        </div>
+<h2 class="mb-4">Trading Dashboard</h2>
+
+<div class="row text-center">
+  <div class="col-md-4 mb-4">
+    <div class="card bg-primary text-white">
+      <div class="card-body">
+        <h5>Total Trades</h5>
+        <p class="fs-4">{{ total_trades }}</p>
+      </div>
     </div>
+  </div>
+
+  <div class="col-md-4 mb-4">
+    <div class="card bg-success text-white">
+      <div class="card-body">
+        <h5>Win Rate</h5>
+        <p class="fs-4">{{ win_rate }}%</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4 mb-4">
+    <div class="card bg-warning text-dark">
+      <div class="card-body">
+        <h5>Average Return</h5>
+        <p class="fs-4">{{ avg_return }}%</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-6 mb-4">
+    <div class="card bg-info text-dark">
+      <div class="card-body">
+        <h5>Average Holding Time</h5>
+        <p class="fs-4">{{ avg_holding }} days</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-6 mb-4">
+    <div class="card bg-dark text-white">
+      <div class="card-body">
+        <h5>Open vs Closed</h5>
+        <p class="fs-4">{{ open_trades }} open / {{ closed_trades }} closed</p>
+      </div>
+    </div>
+  </div>
 </div>
+
 {% endblock %}
