--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -69,7 +69,10 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'add_trade' %}">Add Trade</a></li>
                     {% if user.is_authenticated %}
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+    <form method="post" action="{% url 'logout' %}" style="display:inline;">
+    {% csrf_token %}
+    <button class="btn btn-link nav-link" type="submit">Logout</button>
+  </form>
   </li>
 {% else %}
   <li class="nav-item">
