--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -88,7 +88,18 @@
 
     <!-- Main Content -->
     <div class="container">
-        {% block content %}
+      {% if messages %}
+  <div class="container mt-3">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      </div>
+    {% endfor %}
+  </div>
+{% endif %}
+ 
+      {% block content %}
         {% endblock %}
     </div>
 
