--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -62,6 +62,14 @@
     border: 2px solid #0d6efd;
     border-radius: 50%;
   }
+    /* High-contrast focus outline for keyboard users */
+  input:focus,
+  select:focus,
+  textarea:focus,
+  button:focus {
+    outline: 3px solid #0d6efd !important;
+    outline-offset: 2px;
+  }
 </style>
 
 <body>
