--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -17,6 +17,12 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
   >
 
+   <!-- jQuery UI CSS (for autocomplete widget) -->
+  <link
+    rel="stylesheet"
+    href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.min.css"
+  />
+
   <!-- Allow pages to inject page-specific CSS here -->
   {% block extra_css %}{% endblock %}
 </head>
@@ -158,16 +164,18 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   ></script>
 
-  <!-- jQuery UI CSS & JS for autocomplete -->
+
+
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- jQuery UI CSS & JS for autocomplete -->
 <link
   rel="stylesheet"
   href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"
 />
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-
-
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <!-- Moment.js -->
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
